[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ArkhamClustering"
version = "0.0.1"
license = { text = "GPL-3.0-or-later" }
description = "Clustering Arkham Horror Decks by similarity (hoping it makes sense)"
dependencies = [
    "numpy ==2.2.4",
    "pandas ==2.2.3",
    "matplotlib ==3.10.1",
    "torch ==2.6.0",
    "pytorch-lightning ==2.5.1",
]
